...
    let store: StoreOf<GameListFeature>

    var body: some View {
        WithViewStore(self.store, observe: { $0 }) { viewStore in
            NavigationStack {
                GameListContentView(store: store)
                    .navigationTitle("Games")
                    .onAppear {
                        viewStore.send(.onAppear)
                    }
            }
        }
    }
...
            }
            .searchable(
                text: viewStore.binding(
                    get: \.searchQuery, send: GameListFeature.Action.searchQueryChanged
                ),
                placement: .automatic,
                prompt: "Search All NBA Competitions"
            )
            .toolbarBackground(Color.blue._300, for: .navigationBar)
            .toolbarBackground(Color.blue._300, for: .tabBar)
            .frame(maxWidth: .infinity)
            .refreshable {
                if viewStore.searchResults.isEmpty && viewStore.isLoading == false {
...
