...
            TeamData(
                id: 14,
                abbreviation: "LAL",
                city: "Los Angeles",
                conference: "West",
                division: "Pacific",
                fullName: "Los Angeles Lakers",
                name: "Lakers"
            ),
            TeamData(
                id: 15,
                abbreviation: "MEM",
                city: "Memphis",
                conference: "West",
...
